--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -100,7 +100,7 @@ Contaminated $76.92$ & Nine Maps        & $  4.59$& $  4.58$& $  4.26<\fnl<  4.9
 \begin{figure*}
     \centering
     \includegraphics[width=0.9\textwidth]{figures/clmocks.pdf}
-    \caption{The mean power spectrum of the $\fnl =0$ and $76.9$ mocks with (dashed) and without (solid) imaging systematics before and after applying the nonlinear cleaning method with three, four, and nine maps.}
+    \caption{The mean power spectrum of the $\fnl =0$ and $76.9$ mocks with (dashed) and without (solid) imaging systematics before ('No Weight') and after applying the nonlinear cleaning method with three, four, and nine maps. }
 \end{figure*}
 
 \begin{figure*}
