--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -2,7 +2,7 @@
 
 \author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,5}$,  Hui Kong$^{2}$,  Anna Porredon$^{2}$,\newauthor
 Lado Samushia$^{1}$, Edmond Chaussidon$^{4}$, Alex Krolewski$^{6,7,8}$, Arnaud de Mattia$^{4}$,\newauthor
-Santiago Avila$^{8.5}$, Benedict Bahr-Kalus$^{9}$, Jose Bermejo-Climent$^{?}$,\newauthor Florian Beutler$^{10}$, Klaus Honscheid$^{2,11}$, Eva Mueller$^{?}$, Adam Myers$^{13}$,\newauthor
+Santiago Avila$^{8.5}$, Benedict Bahr-Kalus$^{9}$, Jose Bermejo-Climent$^{?}$,\newauthor Florian Beutler$^{10}$, Klaus Honscheid$^{2,11}$, Eva-Maria Mueller$^{14,15}$, Adam Myers$^{13}$,\newauthor
 Nathalie Palanque-Delabrouille$^{4,5}$, Will Percival$^{6,7,8,?}$, Christophe Yeche$^{4}$
 \\~\\
 % List of institutions
@@ -18,5 +18,7 @@ $^{8.5}$Institut de  F\'isica d'Altes Energies, The Barcelona Institute of Scien
 $^{9}$Korea Astronomy and Space Science Institute, Yuseong-gu, Daedeok-daero 776, Daejeon 34055, Republic of Korea\\
 $^{10}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\
 $^{11}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
-$^{13}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA
+$^{13}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA \\
+$^{14}$Institute of Cosmology and Gravitation, Dennis Sciama Building, University of Portsmouth, Portsmouth PO1 3FX, UK \\
+$^{15}$Department of Physics \& Astronomy, University of Sussex, Brighton BN1 9QH, UK
 }
